Fixed the alignment for footer

--- a/blocks/threecoloumfooter/threecoloumfooter.css
+++ b/blocks/threecoloumfooter/threecoloumfooter.css
@@ -19,14 +19,16 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin: 0px !important;
   vertical-align: top; /* helps if display changes */
 }
 
 /* === Column Headings === */
 .threecoloumfooter-wrapper h5 {
   color: #ffffff;
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   font-weight: 700;
+  font-family: Univers LT W01_65 Bold1475968;
   margin: 0 0 16px 0; /* reset top margin so all start same line */
   line-height: 1.4;
 }
@@ -47,7 +49,8 @@
 /* === Links === */
 .threecoloumfooter-wrapper a {
   color: #ffffff;
-  font-size: 1.05rem;
+  font-size: 1rem;
+  font-family: Univers LT W01_65 Bold1475968;
   text-decoration: none;
   display: inline-flex;
   align-items: center;
@@ -56,6 +59,7 @@
 
 .threecoloumfooter-wrapper a:hover {
   text-decoration: underline;
+  font-weight: 700;
 }
 
 /* === Non-Link Items === */
